--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,14 +2,14 @@
   "tasks": [
     {
       "type": "cppbuild",
-      "label": "C/C++: gcc-10 build active file",
-      "command": "/usr/bin/gcc-10",
+      "label": "C/C++: gcc build active file",
+      "command": "/usr/bin/gcc",
       "args": [
         "-fdiagnostics-color=always",
         "-g",
         "${file}",
         "-o",
-        "${workspaceFolder}/build/${fileBasenameNoExtension}"
+        "${fileDirname}/build/${fileBasenameNoExtension}"
       ],
       "options": {
         "cwd": "${fileDirname}"
